# visiongrid

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  visiongrid.example.yaml  visiongrid.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/tests/: test_api.py  test_detection.py
backend/visiongrid/: __init__.py  cli.py
backend/visiongrid/api/: app.py  state.py
backend/visiongrid/api/routes/: cameras.py  detection.py  events.py  health.py  stream.py
backend/visiongrid/cameras/: __init__.py  base.py  http.py  manager.py  rtsp.py  snapshot.py  usb.py
backend/visiongrid/core/: config.py
backend/visiongrid/detection/: __init__.py  counter.py  pipeline.py  result.py  zones.py
backend/visiongrid/events/: __init__.py  bus.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: camera-grid.tsx  event-panel.tsx  header.tsx  stats-bar.tsx
frontend/src/hooks/: use-api.ts  use-websocket.ts
