[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visiongrid"
version = "0.1.0"
description = "Open-source real-time computer vision platform for any camera"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "VisionGrid Contributors" },
]
keywords = ["computer-vision", "yolo", "rtsp", "surveillance", "object-detection", "camera"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "opencv-python-headless>=4.10.0",
    "ultralytics>=8.3.0",
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "pyyaml>=6.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.19.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
visiongrid = "visiongrid.cli:main"

[project.urls]
Homepage = "https://github.com/lrodriolivera/visiongrid"
Documentation = "https://github.com/lrodriolivera/visiongrid/docs"
Repository = "https://github.com/lrodriolivera/visiongrid"
Issues = "https://github.com/lrodriolivera/visiongrid/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["visiongrid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
